css/billy.css
body {
  font-size: 16px;
  padding-bottom: 20px;
}
.navbar {
  font-size: 18px;
  padding-top: 10px;
  padding-bottom: 5px;
}
.navbar-brand {
	font-size: 24px;
	font-weight: bolder;
}
.floatRight { 
  float: right;
  margin: 10px;
}
.floatLeft { 
  float: right;
  margin: 10px;
}
.step {
  margin-top: 90px;
  font-size: 1.2em;
  max-width: 640px;
}
.step .step_image {
  margin-bottom: 20px;
}
.pizza_list {
  list-style-type: none;
}
.pizza_list li {
  float: left;
  margin: 10px;
}
.icon-bar {
  background-color: burlywood;
}
.carousel {
  width: auto;
  max-width: 640px;
  overflow: visible;
}
.carousel-caption {
  background-color: #000;
  width: 100%;
  right: 0px;
  left: 0px;
  bottom: 0px;
  padding: 5px;
  opacity: 0.5;
  font-size: 1em;
}
.carousel img {
  max-width: 100%;
  height: auto;
}
ul.contact li {
  list-style-type: none;
}
ul.contact i {
  display: inline-block;
  min-width: 50px;
  margin: 10px 0 10px 0;
}
.tip {
  float: right;
  clear: both;
  padding: 10px;
  margin: 20px 0px 20px 20px;
  font-size: 1.6em;
  width: 200px;
}

